cmake_minimum_required(VERSION 2.8.11)

project(Evernus)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(PROJECT_NAME "evernus")

find_package(Boost REQUIRED)
find_package(Qt5LinguistTools REQUIRED)
find_package(Qt5Network REQUIRED)
find_package(Qt5PrintSupport REQUIRED)
find_package(Qt5Sql REQUIRED)
find_package(Qt5Xml REQUIRED)
find_package(Qt5XmlPatterns REQUIRED)
find_package(Qt5Widgets REQUIRED)

if(UNIX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++1y -stdlib=libc++ -g")
elseif(WIN32)
    find_package(Qt5WinExtras REQUIRED)

    set(ADDITIONAL_SRC "evernus.rc")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3")
    set(ADDITIONAL_LIBS Qt5::WinExtras)
endif()

set(TRANSLATIONS lang/lang_pl_PL.ts)
set_source_files_properties(${TRANSLATIONS} PROPERTIES OUTPUT_LOCATION "${CMAKE_CURRENT_BINARY_DIR}/trans")

qt5_wrap_cpp(
    MOC_FILES
    AboutDialog.h
    ActiveTasksDialog.h
    APIInterface.h
    APIManager.h
    APIResponseCache.h
    AssetModel.h
    AssetsImportPreferencesWidget.h
    AssetsWidget.h
    ButtonWithTimer.h
    CharacterBoundWidget.h
    CharacterManagerDialog.h
    CharacterModel.h
    CharacterImportPreferencesWidget.h
    CharacterWidget.h
    DateFilteredPlotWidget.h
    DateRangeWidget.h
    EveMarketDataExternalOrderImporter.h
    EvernusApplication.h
    ExternalOrderImporter.h
    FileDownload.h
    FilterTextRepository.h
    GeneralPreferencesWidget.h
    ImportPreferencesWidget.h
    ItemCostEditDialog.h
    ItemCostModel.h
    ItemCostWidget.h
    KeyEditDialog.h
    LanguageSelectDialog.h
    MainWindow.h
    MarginToolDialog.h
    MarketLogExternalOrderImporter.h
    MarketLogExternalOrderImporterThread.h
    MarketOrderArchiveModel.h
    MarketOrderBuyModel.h
    MarketOrderFilterProxyModel.h
    MarketOrderFilterWidget.h
    MarketOrderInfoWidget.h
    MarketOrderPriceStatusesWidget.h
    MarketOrderSellModel.h
    MarketOrderStatesWidget.h
    MarketOrderView.h
    MarketOrderViewWithTransactions.h
    MarketOrderWidget.h
    MenuBarWidget.h
    NetworkPreferencesWidget.h
    PathPreferencesWidget.h
    PreferencesDialog.h
    PricePreferencesWidget.h
    qcustomplot.h
    StatisticsWidget.h
    StyledTreeView.h
    TextFilterWidget.h
    WalletEntryFilterWidget.h
    WalletJournalModel.h
    WalletJournalWidget.h
    WalletPreferencesWidget.h
    WalletTransactionsModel.h
    WalletTransactionsWidget.h
)

qt5_add_resources(
    RCC_FILES
    evernus.qrc
)

qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TRANSLATIONS})

include_directories(${Boost_INCLUDE_DIRS})

add_executable(
    ${PROJECT_NAME}
    WIN32
    AboutDialog.cpp
    AboutDialog.h
    ActiveTasksDialog.cpp
    ActiveTasksDialog.h
    APIDomParser.h
    APIInterface.cpp
    APIInterface.h
    APIManager.cpp
    APIManager.h
    APIResponseCache.cpp
    APIResponseCache.h
    APIUtils.cpp
    APIUtils.h
    APIXmlReceiver.h
    AssetList.cpp
    AssetList.h
    AssetListRepository.cpp
    AssetListRepository.h
    AssetListXmlReceiver.cpp
    AssetListXmlReceiver.h
    AssetModel.cpp
    AssetModel.h
    AssetProvider.h
    AssetsImportPreferencesWidget.cpp
    AssetsImportPreferencesWidget.h
    AssetsWidget.cpp
    AssetsWidget.h
    AssetValueSnapshot.cpp
    AssetValueSnapshot.h
    AssetValueSnapshotRepository.cpp
    AssetValueSnapshotRepository.h
    ButtonWithTimer.cpp
    ButtonWithTimer.h
    CacheTimer.cpp
    CacheTimer.h
    CacheTimerProvider.h
    CacheTimerRepository.cpp
    CacheTimerRepository.h
    Character.cpp
    Character.h
    CharacterBoundWidget.cpp
    CharacterBoundWidget.h
    CharacterData.h
    CharacterDomParser.h
    CharacterImportPreferencesWidget.cpp
    CharacterImportPreferencesWidget.h
    CharacterListXmlReceiver.cpp
    CharacterListXmlReceiver.h
    CharacterManagerDialog.cpp
    CharacterManagerDialog.h
    CharacterModel.cpp
    CharacterModel.h
    CharacterRepository.cpp
    CharacterRepository.h
    CharacterWidget.cpp
    CharacterWidget.h
    ConquerableStation.cpp
    ConquerableStation.h
    ConquerableStationList.h
    ConquerableStationListXmlReceiver.cpp
    ConquerableStationListXmlReceiver.h
    ConquerableStationRepository.cpp
    ConquerableStationRepository.h
    DatabaseUtils.cpp
    DatabaseUtils.h
    DateFilteredPlotWidget.cpp
    DateFilteredPlotWidget.h
    DateRangeWidget.cpp
    DateRangeWidget.h
    Entity.h
    EveDataProvider.h
    EveMarketDataExternalOrderImporter.cpp
    EveMarketDataExternalOrderImporter.h
    EveMarketDataExternalOrderImporterXmlReceiver.cpp
    EveMarketDataExternalOrderImporterXmlReceiver.h
    EvernusApplication.cpp
    EvernusApplication.h
    EveType.cpp
    EveType.h
    EveTypeRepository.cpp
    EveTypeRepository.h
    ExternalOrder.cpp
    ExternalOrder.h
    ExternalOrderImporter.h
    ExternalOrderImporterNames.h
    ExternalOrderImporterRegistry.h
    ExternalOrderRepository.cpp
    ExternalOrderRepository.h
    FileDownload.cpp
    FileDownload.h
    FilterText.cpp
    FilterText.h
    FilterTextRepository.cpp
    FilterTextRepository.h
    GeneralPreferencesWidget.cpp
    GeneralPreferencesWidget.h
    IconUtils.cpp
    IconUtils.h
    ImportPreferencesWidget.cpp
    ImportPreferencesWidget.h
    ImportSettings.h
    Item.cpp
    Item.h
    ItemCost.cpp
    ItemCost.h
    ItemCostEditDialog.cpp
    ItemCostEditDialog.h
    ItemCostModel.cpp
    ItemCostModel.h
    ItemCostProvider.h
    ItemCostRepository.cpp
    ItemCostRepository.h
    ItemCostWidget.cpp
    ItemCostWidget.h
    ItemData.h
    ItemRepository.cpp
    ItemRepository.h
    Key.cpp
    Key.h
    KeyEditDialog.cpp
    KeyEditDialog.h
    KeyRepository.cpp
    KeyRepository.h
    LanguageComboBox.cpp
    LanguageComboBox.h
    LanguageSelectDialog.cpp
    LanguageSelectDialog.h
    LeafFilterProxyModel.cpp
    LeafFilterProxyModel.h
    main.cpp
    MainWindow.cpp
    MainWindow.h
    MarginToolDialog.cpp
    MarginToolDialog.h
    MarginToolSettings.h
    MarketGroup.cpp
    MarketGroup.h
    MarketGroupRepository.cpp
    MarketGroupRepository.h
    MarketLogExternalOrderImporter.cpp
    MarketLogExternalOrderImporter.h
    MarketLogExternalOrderImporterThread.cpp
    MarketLogExternalOrderImporterThread.h
    MarketOrder.cpp
    MarketOrder.h
    MarketOrderArchiveModel.cpp
    MarketOrderArchiveModel.h
    MarketOrderBuyModel.cpp
    MarketOrderBuyModel.h
    MarketOrderFilterProxyModel.cpp
    MarketOrderFilterProxyModel.h
    MarketOrderFilterWidget.cpp
    MarketOrderFilterWidget.h
    MarketOrderInfoWidget.cpp
    MarketOrderInfoWidget.h
    MarketOrderModel.h
    MarketOrderPriceStatusesWidget.cpp
    MarketOrderPriceStatusesWidget.h
    MarketOrderProvider.h
    MarketOrderRepository.cpp
    MarketOrderRepository.h
    MarketOrders.h
    MarketOrderSellModel.cpp
    MarketOrderSellModel.h
    MarketOrderStatesWidget.cpp
    MarketOrderStatesWidget.h
    MarketOrdersXmlReceiver.cpp
    MarketOrdersXmlReceiver.h
    MarketOrderTreeModel.cpp
    MarketOrderTreeModel.h
    MarketOrderValueSnapshot.cpp
    MarketOrderValueSnapshot.h
    MarketOrderValueSnapshotRepository.cpp
    MarketOrderValueSnapshotRepository.h
    MarketOrderView.cpp
    MarketOrderView.h
    MarketOrderViewWithTransactions.cpp
    MarketOrderViewWithTransactions.h
    MarketOrderVolumeItemDelegate.cpp
    MarketOrderVolumeItemDelegate.h
    MarketOrderWidget.cpp
    MarketOrderWidget.h
    MenuBarWidget.cpp
    MenuBarWidget.h
    MetaGroup.cpp
    MetaGroup.h
    MetaGroupRepository.cpp
    MetaGroupRepository.h
    NetworkPreferencesWidget.cpp
    NetworkPreferencesWidget.h
    NetworkSettings.h
    PathPreferencesWidget.cpp
    PathPreferencesWidget.h
    PathSettings.h
    PathUtils.cpp
    PathUtils.h
    PreferencesDialog.cpp
    PreferencesDialog.h
    PricePreferencesWidget.cpp
    PricePreferencesWidget.h
    PriceSettings.h
    qcustomplot.cpp
    qcustomplot.h
    RefType.cpp
    RefType.h
    RefTypeRepository.cpp
    RefTypeRepository.h
    RefTypeXmlReceiver.cpp
    RefTypeXmlReceiver.h
    Repository.h
    SimpleCrypt.cpp
    SimpleCrypt.h
    StatisticsWidget.cpp
    StatisticsWidget.h
    StyledTreeView.cpp
    StyledTreeView.h
    StyledTreeViewItemDelegate.cpp
    StyledTreeViewItemDelegate.h
    TaskConstants.h
    TextFilterWidget.cpp
    TextFilterWidget.h
    TextUtils.cpp
    TextUtils.h
    TimerTypes.h
    UISettings.h
    UpdateTimer.cpp
    UpdateTimer.h
    UpdateTimerRepository.cpp
    UpdateTimerRepository.h
    WalletEntryFilterWidget.cpp
    WalletEntryFilterWidget.h
    WalletJournal.h
    WalletJournalData.h
    WalletJournalEntry.cpp
    WalletJournalEntry.h
    WalletJournalEntryRepository.cpp
    WalletJournalEntryRepository.h
    WalletJournalModel.cpp
    WalletJournalModel.h
    WalletJournalWidget.cpp
    WalletJournalWidget.h
    WalletJournalXmlReceiver.cpp
    WalletJournalXmlReceiver.h
    WalletPreferencesWidget.cpp
    WalletPreferencesWidget.h
    WalletSettings.h
    WalletSnapshot.cpp
    WalletSnapshot.h
    WalletSnapshotRepository.cpp
    WalletSnapshotRepository.h
    WalletTransaction.cpp
    WalletTransaction.h
    WalletTransactionRepository.cpp
    WalletTransactionRepository.h
    WalletTransactions.h
    WalletTransactionsModel.cpp
    WalletTransactionsModel.h
    WalletTransactionsWidget.cpp
    WalletTransactionsWidget.h
    WalletTransactionsXmlReceiver.cpp
    WalletTransactionsXmlReceiver.h
    WarningBarWidget.cpp
    WarningBarWidget.h
    ${MOC_FILES}
    ${RCC_FILES}
    ${QM_FILES}
    ${ADDITIONAL_SRC}
)

if(WIN32)
    # cmake bug
    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "${LINK_FLAGS} /machine:x64")
endif()

target_link_libraries(
    ${PROJECT_NAME}
    ${Boost_LIBRARIES}
    Qt5::Network
    Qt5::PrintSupport
    Qt5::Sql
    Qt5::Xml
    Qt5::XmlPatterns
    Qt5::Widgets
    ${ADDITIONAL_LIBS}
)
